[imad-console] Updates ui/article-1.html

--- a/ui/article-1.html
+++ b/ui/article-1.html
@@ -1,3 +1,27 @@
 <!DOCTYPE html>
 <html>
+    <head>
+        <title>
+            Article One | Tijo Thomas
+        </title>
+    </head>
+    <body>
+        <div>
+            <a href="/">Home</a>
+        </div>
+        <hr>
+        <h3>
+            Article One
+        </h3>
+        <div>October 2</div>
+        <div>
+            <p>
+                There has been development here. This is an additional sentence.
+            </p>
+            <p>
+                More developement here!
+            </p>
+            
+        </div>
+    </body>
 </html>
