[imad-console] Updates ui/article-1.html

--- a/ui/article-1.html
+++ b/ui/article-1.html
@@ -4,24 +4,34 @@
         <title>
             Article One | Tijo Thomas
         </title>
+        <style>
+            .container {
+                max-width:800px;
+                margin:auto;
+                color:darkgray;
+                font-family:sans-serif;
+            }
+        </style>
     </head>
     <body>
-        <div>
-            <a href="/">Home</a>
-        </div>
-        <hr>
-        <h3>
-            Article One
-        </h3>
-        <div>October 2</div>
-        <div>
-            <p>
-                There has been development here. This is an additional sentence.
-            </p>
-            <p>
-                More developement here!
-            </p>
-            
+        <div class="container">
+            <div>
+                <a href="/">Home</a>
+            </div>
+            <hr>
+            <h3>
+                Article One
+            </h3>
+            <div>October 2</div>
+            <div>
+                <p>
+                    There has been development here. This is an additional sentence.
+                </p>
+                <p>
+                    More developement here!
+                </p>
+                
+            </div>
         </div>
     </body>
 </html>
