--- a/ui/article-1.html
+++ b/ui/article-1.html
@@ -8,7 +8,7 @@
             .container {
                 max-width:800px;
                 margin:auto;
-                color:darkgray;
+                color:gray;
                 font-family:sans-serif;
             }
         </style>
