[imad-console] Updates ui/article-1.html

--- a/ui/article-1.html
+++ b/ui/article-1.html
@@ -6,10 +6,13 @@
         </title>
         <style>
             .container {
-                max-width:800px;
-                margin:auto;
-                color:gray;
-                font-family:sans-serif;
+                    max-width: 800px;
+                    margin: auto;
+                    color: #505050;
+                    font-family: sans-serif;
+                    padding-top: 20px;
+                    padding-right: 20px;
+                    padding-left: 20px;
             }
         </style>
     </head>
