[imad-console] Updates ui/article-1.html

--- a/ui/article-1.html
+++ b/ui/article-1.html
@@ -4,6 +4,7 @@
         <title>
             Article One | Tijo Thomas
         </title>
+        <meta name="viewport" content="width=device_width, initial-scale=1"/>
         <style>
             .container {
                     max-width: 800px;
