--- a/ui/article-3.html
+++ b/ui/article-3.html
@@ -5,24 +5,37 @@
             Article Three | Tijo Thomas
         </title>
         <meta name="viewport" content="width=device_width, initial-scale=1"/>
+        <style>
+            .container {
+                    max-width: 800px;
+                    margin: auto;
+                    color: #505050;
+                    font-family: sans-serif;
+                    padding-top: 20px;
+                    padding-right: 20px;
+                    padding-left: 20px;
+            }
+        </style>
     </head>
     <body>
-        <div>
-            <a href="/">Home</a>
-        </div>
-        <hr>
-        <h3>
-            Article Three
-        </h3>
-        <div>October 4</div>
-        <div>
-            <p>
-                There has been development here. This is an additional sentence.
-            </p>
-            <p>
-                More developement here!
-            </p>
-            
+        <div class="container">
+            <div>
+                <a href="/">Home</a>
+            </div>
+            <hr>
+            <h3>
+                Article Three
+            </h3>
+            <div>October 4</div>
+            <div>
+                <p>
+                    There has been development here. This is an additional sentence.
+                </p>
+                <p>
+                    More developement here!
+                </p>
+                
+            </div>
         </div>
     </body>
 </html>
