--- a/ui/article-2.html
+++ b/ui/article-2.html
@@ -18,7 +18,7 @@
         </style>
     </head>
     <body>
-        <div class="containter">
+        <div class="container">
             <div>
                 <a href="/">Home</a>
             </div>
