[imad-console] Updates ui/article-3.html

--- a/ui/article-3.html
+++ b/ui/article-3.html
@@ -5,17 +5,7 @@
             Article Three | Tijo Thomas
         </title>
         <meta name="viewport" content="width=device_width, initial-scale=1"/>
-        <style>
-            .container {
-                    max-width: 800px;
-                    margin: auto;
-                    color: #505050;
-                    font-family: sans-serif;
-                    padding-top: 20px;
-                    padding-right: 20px;
-                    padding-left: 20px;
-            }
-        </style>
+        <link href="/ui/style.css" rel="stylesheet" />
     </head>
     <body>
         <div class="container">
