[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -4,15 +4,20 @@
         <link href="/ui/style.css" rel="stylesheet" />
     </head>
     <body>
-        <div class="center">
-            <img id="madi" src="/ui/madi.png" class="img-medium"/>
+        <div class="container">
+            <div class="center">
+                <img id="madi" src="http://www.comingsoon.net/assets/uploads/2016/05/AssassinsCreed.jpg" class="img-medium"/>
+            </div>
+            <hr>
+            <h3>Personal</h3>
+            <div class="center text-big bold">
+                <p>Hi! I am Tijo. This will be awesome</p>
+                <h4 style="font-family:cursive; color:gold">Building this up!</h4>            
+            </div>
+            <h3>Profession</h3>
+            <div>Will let you know when I have one!</div>
+            <script type="text/javascript" src="/ui/main.js">
+            </script>
         </div>
-        <br>
-        <div class="center text-big bold">
-            Hi! I am Tijo. This will be awesome
-            <h4 style="font-family:cursive; color:gold">Building this up!</h4>            
-        </div>
-        <script type="text/javascript" src="/ui/main.js">
-        </script>
     </body>
 </html>
