[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -10,7 +10,7 @@
             </div>
             <hr>
             <h3>Personal</h3>
-            <div class="center text-big bold">
+            <div>
                 <p>Hi! I am Tijo. This will be awesome</p>
                 <h4 style="font-family:cursive; color:gold">Building this up!</h4>            
             </div>
