--- a/ui/index.html
+++ b/ui/index.html
@@ -16,7 +16,9 @@
             </div>
             <hr>
             <h3>Profession</h3>
-            <div>Will let you know when I have one!</div>
+            <div>Will let you know when I have one!
+            <p>This button <button id="counter">click me!</button> has been clicked <span>0</span> times</p>
+            </div>
             <script type="text/javascript" src="/ui/main.js">
             </script>
         </div>
