--- a/ui/index.html
+++ b/ui/index.html
@@ -19,6 +19,14 @@
             <div>Will let you know when I have one!
             <p>This button <button id="counter">click me!</button> has been clicked <span id="count">0</span> times</p>
             </div>
+            <br/>
+            <input type="text" id="name" placeholder="name"></input>
+            <input type="Submit" value="Submit"></input>
+            <ul>
+                <li>Name1</li>
+                <li>Name2</li>
+                <li>Name3</li>
+            </ul>
             <script type="text/javascript" src="/ui/main.js">
             </script>
         </div>
