[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -21,11 +21,9 @@
             </div>
             <br/>
             <input type="text" id="name" placeholder="name"></input>
-            <input type="Submit" value="Submit"></input>
-            <ul>
-                <li>Name1</li>
-                <li>Name2</li>
-                <li>Name3</li>
+            <input type="Submit" value="Submit" id="submit_btn"></input>
+            <ul id="namelist">
+                
             </ul>
             <script type="text/javascript" src="/ui/main.js">
             </script>
