--- a/ui/index.html
+++ b/ui/index.html
@@ -20,7 +20,7 @@
             <p>This button <button id="counter">click me!</button> has been clicked <span id="count">0</span> times</p>
             </div>
             <br/>
-            <input type="text" id="name" placeholder="name"></input>
+            <input type="text" id="name" placeholder="Enter your name"></input>
             <input type="Submit" value="Submit" id="submit_btn"></input>
             <ul id="namelist">
                 
