[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -12,7 +12,7 @@
             <h3>Personal</h3>
             <div>
                 <p>Hi! I am Tijo. This will be awesome</p>
-                <h4 style="font-family:cursive; color:gold">Building this up!</h4>            
+                <h4 style="font-family:cursive; color:#3f0084">Building this up!</h4>            
             </div>
             <hr>
             <h3>Profession</h3>
