[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -38,7 +38,7 @@
             <hr>
             <h3>Personal</h3>
             <div>
-                <p>Hi! I am Tijo. This will be awesome</p>
+                <p id="greeting">Hi! I am Tijo. This will be awesome</p>
                 <h4 style="font-family:cursive; color:#3f0084">Building this up!</h4>            
             </div>
             <hr>
