[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -23,7 +23,7 @@
             	if(thour==0){ap=" AM";thour=12;}
                 else if(thour<12){ap=" AM";}
                 else if(thour==12){ap=" PM";}
-                else if(thour>12){ap=" PM";nhour-=12;}
+                else if(thour>12){ap=" PM";thour-=12;}
 
             	
             	if (tmin<=9) { tmin="0"+tmin; }
