[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -39,7 +39,7 @@
     </head>
     <body>
         <div class="container">
-            <div id="dateDiv"></div>
+            <div id="dateDiv"></div><br>
             <div id="timeDiv"></div>
             <div class="center">
                 <img id="madi" src="http://www.comingsoon.net/assets/uploads/2016/05/AssassinsCreed.jpg" class="img-medium"/>
