adjusting the submit

--- a/ui/index.html
+++ b/ui/index.html
@@ -32,15 +32,17 @@
       </div>
       <hr>
       <h3>Profession</h3>
-      <div>Will let you know when I have one!
+      <div>Will let you know when I have one!</div>
       <br/>
       <hr>
-      <p>This button <button id="counter">click me!</button> has been clicked <span id="count">0</span> times</p>
+      <div>
+        <p>This button <button id="counter">click me!</button> has been clicked <span id="count">0</span> times</p>
+
+        <br/>
+        <input type="text" id="name" placeholder="Enter your name"></input>
+        <input type="Submit" value="Submit" id="submit_btn"></input>
+        <ul id="namelist"></ul>
       </div>
-      <br/>
-      <input type="text" id="name" placeholder="Enter your name"></input>
-      <input type="Submit" value="Submit" id="submit_btn"></input>
-      <ul id="namelist"></ul>
       <script type="text/javascript" src="/ui/main.js">
       </script>
     </div>
