--- a/ui/index.html
+++ b/ui/index.html
@@ -7,17 +7,17 @@
   <body>
     <div class="container">
       <ul class="dropdown">
-        <li><a href="http://tijothomas11.imad.hasura-app.io/">Home</a></li>
-        <li><a href="http://tijothomas11.imad.hasura-app.io/article-1">Anonymous venting</a></li>
+        <li><a href="/">Home</a></li>
+        <li><a href="/article-1">Anonymous Venting</a></li>
         <li class="dropdown2">
-          <a href="http://tijothomas11.imad.hasura-app.io/article-2" class="dropbtn">Article 2</a>
+          <a href="/article-2" class="dropbtn">Article 2</a>
           <div class="dropdown-content">
             <a href="#">Link 1</a>
             <a href="#">Link 2</a>
             <a href="#">Link 3</a>
           </div>
         </li>
-        <li><a href="http://tijothomas11.imad.hasura-app.io/article-3">Article 3</a></li>
+        <li><a href="/article-3">Article 3</a></li>
       </ul>
       <div id="dateDiv"></div><br>
       <div id="timeDiv"></div>
