--- a/ui/index.html
+++ b/ui/index.html
@@ -22,7 +22,7 @@
       <div id="dateDiv"></div><br>
       <div id="timeDiv"></div>
       <div class="center">
-          <img id="madi" src="http://www.comingsoon.net/assets/uploads/2016/05/AssassinsCreed.jpg" class="img-medium"/>
+          <img id="madi" src="http://www.comingsoon.net/assets/uploads/2016/05/AssassinsCreed.jpg" alt="my image" class="img-medium"/>
       </div>
       <hr>
       <h3>Personal</h3>
